--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-12 col-lg-6">
                 <div class="row bg-dark g-2 p-2 p-lg-3 rounded-5">
                     <div class="col-12">
-                        <input id="display" type="text" class="p-2 inp bg-dark text-light border border-3 border-light">
+                        <input id="display" type="text" class="p-2 inp bg-dark text-light border border-3 border-light disabled">
                         <button value="←" class="btn btn-danger p-2 ps-3 pe-3 redbtn" onclick="back()" id="backspace">←</button>
                         <button value="C" class="btn btn-danger p-2 ps-3 pe-3 redbtn" onclick="clearDisplay('')">C</button>
                     </div>
